--- a/app/src/main/res/layout/activity_sheet_music2.xml
+++ b/app/src/main/res/layout/activity_sheet_music2.xml
@@ -159,13 +159,26 @@
             android:tint="@color/Smoke_Pine"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btn_forward2"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:src="@drawable/ic_rewind" />
+
+        <ImageView
+            android:id="@+id/imageView4"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_marginStart="52dp"
+            android:tint="@color/Smoke_Pine"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.493"
+            tools:srcCompat="@drawable/music_96" />
 
         <ImageButton
             android:id="@+id/btn_forward2"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_marginEnd="44dp"
+            android:layout_marginEnd="50dp"
             android:background="#00FFFFFF"
             android:contentDescription="@string/forward"
             android:src="@drawable/ic_forward"
@@ -178,27 +191,29 @@
             android:id="@+id/up_button2"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_marginStart="30dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="10dp"
             android:background="#00FFFFFF"
             android:scaleType="fitXY"
-            android:src="@drawable/like"
+            android:src="@drawable/arrowup"
             android:tint="@color/Smoke_Pine"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/imageView4"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"  />
 
         <ImageButton
             android:id="@+id/down_button2"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_marginStart="10dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginBottom="10dp"
             android:background="#00FFFFFF"
             android:scaleType="fitXY"
-            android:src="@drawable/dislike"
+            android:src="@drawable/arrowdown"
             android:tint="@color/Smoke_Pine"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/up_button2"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView4"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <ImageButton
